rnsc/tests/snapshots/error-parser-outside_class_directive-dot_code.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.code
.class public HelloWorld
.super java/lang/Object
----- STDERR -----
[E-008] Error: unexpected directive before class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/dot_code.rns:1:1 ]
   │
 1 │ .code
   │ ──┬──  
   │   ╰──── valid context for .code directive is: 'method body'.
   │ 
   │ Help: Make sure the file starts with a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-008
───╯
----- HASH -----
not generated
